--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
   </div> -->
   <!-- nav  -->
-  <nav class="navbar navbar-expand-lg fixed-top .bg-primary text-white navbar-dark">
+  <nav class="navbar navbar-expand-lg fixed-top .bg-primary text-white navbar-dark" id="navbar">
   <div class="container">
     <a class="navbar-brand fw-bold fs-4" href="#" id="text">Expro</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
