--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
   </div>
    <div class="row d-flex row-cols-lg-3 g-4">
-    <div class="col">
+    <div class="col" id="gabar">
       <a href="" target="_blank"><img src="assets/img/projects/projects-1.jpg" alt=""></a>
       <h2>House</h2>
       <p>“Project Rumah yang Telah Diselesaikan <br> Desain Elegan, Konstruksi Berkualitas.”</p>
@@ -149,6 +149,183 @@
     </div>
   </div>
  </div>
+ </div>
+  <!-- project -->  
+   <div class="layanan">
+    <div class="container">
+      <div class="row">
+        <div class="col mb-5">
+          <h1>Layanan <br> Yang Dapat Di Berikan </h1>
+          <hr>
+        </div>
+        <div class="row d-flex  row-cols-lg-2 row-cols-1">
+          <div class="col " id="">
+              <img src="assets/img/services/services-1.jpg" alt="" height="350px">
+            
+              <img src="assets/img/services/services-2.jpg" alt="" height="350px">
+            </div>
+          <div class="col mt-5   ">
+              <h5 class="mt-3"><i class="fa-regular fa-circle-check"></i> Bekerjasama dengan Design Hebat</h5>
+              <br>
+              <h5><i class="fa-regular fa-circle-check "></i> Alat dan SDM yang Berkualitas serta Berpengalaman  </h5>
+              <br>
+              <h5><i class="fa-regular fa-circle-check"></i> Terserdia Produk - Produk interior</h5>
+              <br>
+              <h5><i class="fa-regular fa-circle-check"></i> 90% Dapat Mengerjakan Project sesuai Target</h5>
+              <br>
+              <h5><i class="fa-regular fa-circle-check"></i> Harga yang Terjangkau </h5>
+
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
+   <br>
+   <hr class="rosio">
+   <!-- layanan -->
+<div class="PTY">
+  <div class="container">
+    <div class="textPTY">
+      <h1>Yang Bisa di Tanyakan</h1>
+    </div>
+    <hr>
+    <br>
+    <br>
+<div class="accordion" id="accordionContoh">
+  <div class="row row-cols-lg-2 row-cols-1 g-3">
+
+    <!-- item 1 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h1">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="false">
+            Accordion Item #1
+          </button>
+        </h2>
+        <div id="c1" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 1</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- item 2 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2" aria-expanded="false">
+            Accordion Item #2
+          </button>
+        </h2>
+        <div id="c2" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 2</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- item 3 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3" aria-expanded="false">
+            Accordion Item #3
+          </button>
+        </h2>
+        <div id="c3" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 3</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- item 4 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c4" aria-expanded="false">
+            Accordion Item #4
+          </button>
+        </h2>
+        <div id="c4" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 4</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- item 5 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h5">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c5" aria-expanded="false">
+            Accordion Item #5
+          </button>
+        </h2>
+        <div id="c5" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 5</div>
+        </div>
+      </div>
+    </div>
+
+    <!-- item 6 -->
+    <div class="col">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="h6">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c6" aria-expanded="false">
+            Accordion Item #6
+          </button>
+        </h2>
+        <div id="c6" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
+          <div class="accordion-body">Dummy content 6</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+  </div>
+</div>
+
+
+   <br>
+
+  <footer class="pt-5 pb-4 bg-dark text-white mt-5" >
+  <div class="container" id="polos">
+    <div class="row g-3">
+
+      <div class="col-lg-6 me-5" id="Footer1">
+        <h3 class="fw-bold mb-3">Ngoding.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis obcaecati esse reiciendis perspiciatis! Nulla quod porro laborum doloremque reiciendis earum!</p>
+      </div>
+
+      <div class="col-lg-2 me-3" id="Footer2">
+        <h5 class="fw-semibold mb-3">Menu</h5>
+        <ul class="list-unstyled">
+          <li>Home</li>
+          <li>About</li>
+          <li>Projects</li>
+          <li>Services</li>
+          <li>FAQ</li>
+        </ul>
+      </div>
+
+      <div class="col-lg-3 " id="Footer3">
+        <h5 class="fw-semibold mb-3 ">Contact</h5>
+        <ul class="list-unstyled">
+          <li>building@gmail.com</li>
+          <li>+62 1234 5678 901</li>
+          <li>@buildingID (Telegram)</li>
+        </ul>
+      </div>
+
+    </div>
+
+    <div class="text-center mt-4">
+      <small>© Copyright 2025 by Nama Lengkap, All Right Reserved.</small>
+    </div>
+  </div>
+</footer>
+
+
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
