lorem dan ngebagusin

--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h1">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c1" aria-expanded="false">
-            Accordion Item #1
+            Bagaimana Cara Daftarnya?
           </button>
         </h2>
         <div id="c1" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 1</div>
+          <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni sit ea illum molestiae, incidunt numquam impedit ratione quo enim, corrupti fugiat labore hic autem itaque repudiandae, ut voluptatum accusantium? Expedita.</div>
         </div>
       </div>
     </div>
@@ -213,11 +213,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h2">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c2" aria-expanded="false">
-            Accordion Item #2
+            Berapa DP Pembangunannya?
           </button>
         </h2>
         <div id="c2" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 2</div>
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium quo officia, expedita praesentium nihil unde voluptatem, ducimus mollitia ex provident aspernatur? Incidunt officia aperiam itaque fugit. Nostrum voluptatibus iusto illum.</div>
         </div>
       </div>
     </div>
@@ -227,11 +227,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h3">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c3" aria-expanded="false">
-            Accordion Item #3
+            Apakah Sudah Terverifikasi?
           </button>
         </h2>
         <div id="c3" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 3</div>
+          <div class="accordion-body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero consequatur tenetur inventore recusandae nam architecto corporis quia amet quibusdam repellendus, obcaecati ad assumenda saepe officia eum, at autem, odio aperiam.</div>
         </div>
       </div>
     </div>
@@ -241,11 +241,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h4">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c4" aria-expanded="false">
-            Accordion Item #4
+            Apakah Ada Forum Diskusi?
           </button>
         </h2>
         <div id="c4" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 4</div>
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione reiciendis accusamus in earum optio beatae dicta corporis fugit aperiam voluptatibus iure, debitis ab, consequatur accusantium, numquam quam tempore odio sed?</div>
         </div>
       </div>
     </div>
@@ -255,11 +255,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h5">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c5" aria-expanded="false">
-            Accordion Item #5
+            Apakah Produk - Produk Interiornya Mahal?
           </button>
         </h2>
         <div id="c5" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 5</div>
+          <div class="accordion-body">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore beatae officia, possimus fuga dolorem, aut facere cum eaque sit repellendus dolor esse, ullam nisi eum veniam natus. Quos, possimus molestiae.</div>
         </div>
       </div>
     </div>
@@ -269,11 +269,11 @@
       <div class="accordion-item">
         <h2 class="accordion-header" id="h6">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#c6" aria-expanded="false">
-            Accordion Item #6
+            Apakah Dapat Menawar Harga?
           </button>
         </h2>
         <div id="c6" class="accordion-collapse collapse" data-bs-parent="#accordionContoh">
-          <div class="accordion-body">Dummy content 6</div>
+          <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum expedita provident soluta, quia facilis cum, sed quam, culpa quod a porro delectus laudantium reprehenderit nulla adipisci? In amet dolores eligendi!</div>
         </div>
       </div>
     </div>
