--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           <h1>Layanan <br> Yang Dapat Di Berikan </h1>
           <hr>
         </div>
-        <div class="row d-flex  row-cols-lg-2 row-cols-1">
-          <div class="col " id="">
+        <div class="row ">
+          <div class="col d-flex  row-cols-lg-2 row-cols-1 gap-2" id="">
               <img src="assets/img/services/services-1.jpg" alt="" height="350px">
             
               <img src="assets/img/services/services-2.jpg" alt="" height="350px">
